fix(input-group): ensure that the autofill user agent background is not visible

--- a/src/components/input/themes/input.base.scss
+++ b/src/components/input/themes/input.base.scss
@@ -30,6 +30,21 @@
     outline-style: none;
     font-family: var(--ig-font-family);
     z-index: 1;
+
+    // This is a hack that removes the autofill background and it's essential,
+    // otherwise the background is on top of the floating label in material theme.
+    // The !important flag is because themes that defin transition delay on that element are overriding the transition delay hack
+    &:-webkit-autofill,
+    &:-webkit-autofill:hover,
+    &:-webkit-autofill:focus,
+    &:-webkit-autofill:active,
+    &:autofill,
+    &:autofill:hover,
+    &:autofill:focus,
+    &:autofill:active{
+        transition-delay: 99999s !important;
+        transition-delay: 99999s !important;
+    }
 }
 
 [part^='container'] {
